--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "laravel/breeze": "^2.0",
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9",
+        "livewire/livewire": "^3.4",
         "realrashid/sweet-alert": "^7.1",
         "yajra/laravel-datatables-oracle": "^11"
     },
